# variaty-practices

./: .gitignore  readme.md
cc-sdd-practices/: Makefile  db.sqlite3  pyproject.toml  readme.md
cc-sdd-practices/config/: settings.py  urls.py
cc-sdd-practices/knowledge/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
django_basics/: .flake8  Makefile  README.md  db.sqlite3  pyproject.toml
django_basics/django_basics/: admin.py  asgi.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
django_basics/django_basics/migrations/: 0001_initial.py
django_basics/django_basics/templates/: redoc.html
django_basics/django_basics/tests/dummy_functions/: dummy.py  other_dummy.py
django_basics/django_basics/tests/factories/: book_factory.py
django_basics/django_basics/tests/test_others/: test_fixtures.py  test_mocks.py  test_time.py
django_basics/django_basics/tests/test_views/: test_book_list.py
docker-uwsgi-flask-practices/: Dockerfile  Makefile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  run_flask.sh  run_tests.sh  start.sh  uwsgi.ini
docker-uwsgi-flask-practices/app/: main.py  requirements.txt  uwsgi.ini
docker-uwsgi-flask-practices/envs/: runtime.env
docker-uwsgi-flask-practices/nginx/: nginx.conf
docker-uwsgi-flask-practices/tests/: test_api.py
docker-uwsgi-flask-practices/uwsgi/: uwsgi.ini
dotenvx-practice/: .env.dev  .env.local  .env.prod  .env.stg  Makefile  env.sh  pyproject.toml  readme.md
dotenvx-practice/myproject/: settings.py  urls.py
dotenvx-practice/myproject/views/: __init__.py  env_test.py
engineering-handbook/: README.md  implementation-plan.md  index.html  package-lock.json  package.json  specs.md  tsconfig.app.json
engineering-handbook/content/: index.json
flask-practices/: README.md  hello.py  makefile
graph-practices/: README.md  histgram.ipynb  values.ipynb
jira-api/: create_learning_epic.py  pyproject.toml  readme.md
json-schema-practices/: README.md  json_schema_practices.ipynb
mcp-practices/: .envrc.example  .mcp.json  readme.md
nextjs-practices/: Makefile  README.md  jest.config.ts  package-lock.json  package.json  playwright-config.json  playwright-mcp.md
pandas-practices/: README.md  pandas-practices.ipynb
plantuml-practices/: README.md  sequence.plantuml
polars-practices/: README.md  multiple-parquets-practice.ipynb  people.parquet  polars.ipynb
python-practices/: .env  README.md  pydantic-practices.ipynb
shell-practices/: README.md  export-every-lines-in-files.sh  rename-files-in-folder.sh
web-tricks/: AGENTS.md  README.md  index.html  package-lock.json  package.json
(+173 files in other folders)
