[project]
name = "django-basics"
version = "0.1.0"
description = ""
authors = [
    {name = "Kin Yuunan",email = "yuunan.kin@gmail.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.2.5"
djangorestframework = "^3.16.1"
drf-yasg = "^1.21.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-mock = "^3.14.1"
pytest-cov = "^6.2.1"
pytest-django = "^4.11.1"
factory-boy = "^3.3.3"
pytest-freezegun = "^0.4.2"
requests-mock = "^1.12.1"
django-stubs = "^5.2.2"
djangorestframework-stubs = "^3.16.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
